[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Layer 2.png" type="Texture" id=1]
[ext_resource path="res://src/arial.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/FeatureList.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[node name="featureList" type="Sprite"]
position = Vector2( 449.932, 318.343 )
texture = ExtResource( 1 )
script = ExtResource( 3 )

[node name="shadow" type="Label" parent="."]
margin_left = -310.0
margin_top = -264.0
margin_right = 309.0
margin_bottom = -148.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Project-Name"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="Label" parent="."]
margin_left = -311.0
margin_top = -267.0
margin_right = 309.0
margin_bottom = -151.0
custom_fonts/font = SubResource( 2 )
text = "Project-Name"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = -449.027
margin_top = -229.189
margin_right = -335.027
margin_bottom = -194.189
text = "New Feature"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="d" type="Button" parent="."]
margin_left = -448.186
margin_top = -185.462
margin_right = -334.186
margin_bottom = -150.462
text = "Delete"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 318.502
margin_top = -259.0
margin_right = 349.502
margin_bottom = -218.0
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 317.555
margin_top = 221.0
margin_right = 349.555
margin_bottom = 258.0
text = "V"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="newFeature"]
[connection signal="pressed" from="d" to="." method="eraseButton"]
[connection signal="pressed" from="Button2" to="." method="scrollUp"]
[connection signal="pressed" from="Button3" to="." method="scrollDown"]
